--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,10 @@
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Raleway:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 @theme {
-  --font-family-serif: 'Cormorant Garamond', serif;
-  --font-family-sans: 'Raleway', sans-serif;
+  --font-Montserrat: "Montserrat";
+  --font-display: "Montserrat", system-ui, sans-serif;
 
   --color-primary: #841443;
   --color-primary-light: #a01a54;
@@ -38,10 +39,6 @@
 
 body {
   @apply bg-white text-secondary antialiased font-sans;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  @apply font-serif;
 }
 
 .glass {
